Version 1.8 - 2016-07-06
* Module creation