@@ -7,15 +7,35 @@ from trytond.pyson import And, Eval, Or
 
 from trytond.modules.cog_utils import fields, model
 
-__metaclass__ = PoolMeta
 __all__ = [
+    'Benefit',
     'BenefitRule',
     'BenefitRuleIndemnification',
     'BenefitRuleDeductible',
     ]
 
 
+class Benefit:
+    __metaclass__ = PoolMeta
+    __name__ = 'benefit'
+
+    def required_extra_data(self, service, date):
+        if self.benefit_rules and service:
+            return self.benefit_rules[0].required_extra_data(service, date)
+        return []
+
+    def get_extra_data_def(self, existing_data, condition_date, service=None):
+        values = super(Benefit, self).get_extra_data_def(existing_data,
+            condition_date)
+        if not self.benefit_rules or not service:
+            return values
+        required = [e.name
+            for e in self.required_extra_data(service, condition_date)]
+        return {k: v for k, v in values.iteritems() if k in required}
+
+
 class BenefitRule:
+    __metaclass__ = PoolMeta
     __name__ = 'benefit.rule'
 
     indemnification_rules = fields.Many2Many(
@@ -111,13 +131,31 @@ class BenefitRule:
         option_benefit = version.get_benefit(self.benefit)
         if not getattr(option_benefit, rule_name):
             return default_value
-        return getattr(option_benefit, rule_name)(args)
+        return getattr(option_benefit, 'calculate_' + rule_name)(args)
 
     def calculate_deductible_rule(self, args):
         return self._calculate_rule('deductible_rule', args, datetime.date.min)
 
     def calculate_indemnification_rule(self, args):
         return self._calculate_rule('indemnification_rule', args, [])
+
+    def required_extra_data_for_rule(self, rule_name, date, option):
+        if getattr(self, 'force_' + rule_name):
+            return getattr(self, rule_name).extra_data_used
+        # Use option defined rule
+        version = option.get_version_at_date(date)
+        option_benefit = version.get_benefit(self.benefit)
+        rule = getattr(option_benefit, rule_name)
+        if not rule:
+            return []
+        return rule.extra_data_used
+
+    def required_extra_data(self, service, date):
+        res = []
+        for rule_name in ('deductible_rule', 'indemnification_rule'):
+            res.extend(self.required_extra_data_for_rule(rule_name, date,
+                    service.option))
+        return res
 
 
 class BenefitRuleIndemnification(model.CoopSQL):
