@@ -2,8 +2,6 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form string="Benefit" col="2">
-    <label name="benefit"/>
-    <field name="benefit"/>
     <label name="version"/>
     <field name="version"/>
     <label name="deductible_rule"/>
