@@ -2,6 +2,8 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form string="Version" col="1">
-    <field name="benefits" group="benefits" mode="tree" view_ids="claim_indemnification_group.option_benefit_view_list" expand_toolbar="0"/>
+    <group id="invisible_benefit" string="Invisible Benefit">
+        <field name="benefits" group="benefits" mode="tree" view_ids="claim_indemnification_group.option_benefit_view_list" expand_toolbar="0"/>
+    </group>
     <field name="benefits" group="benefits" mode="form" view_ids="claim_indemnification_group.option_benefit_view_form" expand_toolbar="0"/>
 </form>
