@@ -1,2 +1,4 @@
+* Filter complementary data on delivered service according to selected rules
+
 Version 1.8 - 2016-07-06
 * Module creation
